--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="mediabox.css">
     <link rel="stylesheet" href="swiper.css">
+    <link rel="stylesheet" href="Restomenu.css">
 </head>
 <body>
     <div id="root">
