--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="mediabox.css">
     <link rel="stylesheet" href="swiper.css">
     <link rel="stylesheet" href="Restomenu.css">
+    <link rel="stylesheet" href="shimmer.css">
 </head>
 <body>
     <div id="root">
