modified app Ui

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="swiper.css">
     <link rel="stylesheet" href="Restomenu.css">
     <link rel="stylesheet" href="shimmer.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <div id="root">
