--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="Restomenu.css">
     <link rel="stylesheet" href="shimmer.css">
     <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="cartstyle.css">
 </head>
 <body>
     <div id="root">
